|                                                                 |
|         - AWStats:                                              |
|               * apache: set statsdir if awstats is enabled      |
|               * gui: disable stats-alias in client menu         |
\_________________________________________________________________/

2007-04-16 Benedikt Heintel
	- CONFIGS:
		* fixed bug #174: master not longer reachable on adding Domain
	- ENGINE:
		* fixed bug #174: master not longer reachable on adding Domain

2007-04-16 Benedikt Heintel
	- LANGUAGES:
		* Romanian: added missing strings
		* Spanish: added language (Spain)
	- GUI:
		* renamed ispcp-2-0.php => ispcp-functions.php
	- SETUP:
		* fixed erron on uninstall

2007-04-11 Malte Geierhos
	- RELEASE:
		* name change of project: VHCS ω => ispCP ω

2007-04-14 Jan Porath
	- GUI:
		* fixed bug: add alias domains fails
		* fixed bug: #164 port check update deletes protocol entry

2007-04-07 Benedikt Heintel
	- LANGUAGES:
		* Romanian: added language

2007-04-05 Benedikt Heintel
	- GUI:
		* fixed bug: update available was shown, even if no update was available
	- ENGINE:
		* fixed bug #158: Backup breaks on bzip if file not exists
	- LANGUAGES:
		* English: fixed spelling mistake
		* French: changed translated strings
		* Spanish: added Spanish Spain
		* Russian: added missing strings
		* Turkish: added missing strings
	- SETUP:
		* fixed: uninstall-script linebreaks
		* fixed: install-script stopped on wrong Hostname
	- THEMES:
		o Omega:
			* fixed bug #147: padding changed

2007-04-05 Jan Porath
	- ENGINE:
		* fixed bug #144: after deleting a protected area in the GUI, the directory is still protected
	- SETUP:
		* fixed bug #60: user groupes deleted on uninstall
		* fixed bug #153: when installing the setup asks you the hostname and cuts it down to the local part

2007-04-04 Benedikt Heintel
	- LANGUAGES:
		* English: updates
		* Turkish: added missing strings
		* Russian: added missing strings
	- GUI: