@@ -87,7 +87,7 @@ td {
   </tr>
   <tr>
     <td>&nbsp;</td>
-    <td>If you are the Administrator of this domain, please login <a href="{BASE_SERVER_VHOST}" class="link">here</a>.</td>
+    <td>If you are the Administrator of this domain, please login <a href="http://{BASE_SERVER_VHOST}" class="link">here</a>.</td>
     <td>&nbsp;</td>
   </tr>
   <tr>
